# python-frank-energie-old

./: .pre-commit-config.yaml  .pylintrc  .yamllint  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  linting.yaml  pylint.yml  python-package.yml  pyupgrade.yml  release-drafter.yaml  release.yaml  requirements.txt
python_frank_energie/: __init__.py  exceptions.py  frank_energie.py  models.py
tests/: test_frank_energie.py  test_models.py
