[tool.poetry]
name = "python-frank-energie"
version = "2024.11.10"
description = "Asynchronous Python client for the Frank Energie"
authors = ["HiDiHo01"]
maintainers = ["HiDiHo01"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/HiDiHo01/python-frank-energie"
repository = "https://github.com/HiDiHo01/python-frank-energie"
documentation = "https://github.com/HiDiHo01/python-frank-energie"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent"
]
packages = [
    { include = "python_frank_energie" },
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
aiohttp = ">=3.8.0"
python-dateutil = ">=2.8.0"

[tool.poetry.dev-dependencies]
aresponses = "^3.0.0"
black = "^24.10"
blacken-docs = "^1.19.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.5.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
pre-commit-hooks = "^5.0.0"
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
yamllint = "^1.35.1"
pyupgrade = "^3.18.0"
flake8-simplify = "^0.21.0"
vulture = "^2.13"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.14.0"
flake8-eradicate = "^1.2.1"
flake8-markdown = "^0.3.0"
freezegun = "^1.2.2"
darglint = "^1.8.1"
safety = "^3.2.7"
codespell = "^2.3.0"
bandit = "^1.7.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/HiDiHo01/python-frank-energie/issues"
Changelog = "https://github.com/HiDiHo01/python-frank-energie/releases"

[tool.black]
target-version = ['py312']

[tool.coverage.paths]
source = ["python_frank_energie"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["python_frank_energie"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "too-few-public-methods",
    "duplicate-code",
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=120

[tool.pylint.DESIGN]
max-attributes=20

[tool.vulture]
min_confidence = 80
paths = ["python_frank_energie"]
verbose = true

[build-system]
requires = ["homeassistant","setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
