[project]
name = "python-frank-energie"
version = "2025.3.22"
description = "Asynchronous Python client for the Frank Energie"
authors = [
    {name = "HiDiDo",email = "hidiho@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python (>=3.10,<4.0)",
    "aiohttp (>=3.8.0)",
    "pydantic (>=2.10.6)",
    "python-dateutil (>=2.8.0)",
    "PyJWT (>=2.8.0)",
    "syrupy (>=4.6.1,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
aresponses = "^3.0.0"
black = "^24.8"
blacken-docs = "^1.19.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.5.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pre-commit-hooks = "^4.6.0"
pydantic = "^2.10.6"
pylint = "^3.3.3"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pyupgrade = "^3.19.0"
flake8-simplify = "^0.21.0"
vulture = "^2.12"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.16.0"
flake8-eradicate = "^1.2.1"
flake8-markdown = "^0.3.0"
freezegun = "^1.5.1"
darglint = "^1.8.1"
safety = "^3.2.7"
codespell = "^2.3.0"
bandit = "^1.8.2"

[build-system]
requires = ["homeassistant","setuptools","pydantic","poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
